[package]
name = "cuda-tuple-space"
version = "0.1.0"
edition = "2021"
description = "Linda coordination with field matching"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-tuple-space"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

